Canary release (#21)
* Added canary_release_count variable to allow canary release in asg.

* formatting corrected.

* canary_release_count default value set for backward compatibility. ReadMe updated on how to use canary release.

* set canary_release_count default to 0 in default for ansible task instead of checking in the task.

* Corrected usage in README for canary release.

* Added functionality for automatic and manual canary release. Added check for replace_new_instances to avoid any misunderstanding.

* Changed variable name for manual canary release instance ids.

* fixed broken README.md