@@ -44,6 +44,12 @@ Requirements mentioned above are based on these modules which are used in this r
     - name: launch_configuration_name_suffix
       description: Suffix that will be added to Launch Configurations which are going to be created and deleted by this role.
       value: rolling
+    - name: canary_release_count
+      description: No of instance to be updated automatically with new AMI for canary release (Should be strictly less than ASG size) .
+      value: 0
+    - name: canary_release_instance_ids
+      description: Instance ids to be updated manually with new AMI for canary release (Should be strictly less than ASG size) .
+      value: []
 
 ### Required Variables ###
 
@@ -83,7 +89,7 @@ Requirements mentioned above are based on these modules which are used in this r
 
  - The AWS EC2 ASG is already provisioned
 
-## Example Playbook ##
+## Example Playbook For Full Deployment ##
 
 
 ```
@@ -92,7 +98,7 @@ Requirements mentioned above are based on these modules which are used in this r
   connection: local
   vars:
     # set common_java_opts in supervisor using the ami baking playbook!
-    app_memory_java_opts: >- 
+    app_memory_java_opts: >-
       -Xms1g -Xmx1g -XX:PermSize=512m -XX:MaxPermSize=512m
     instance_count: 1
   roles:
@@ -109,7 +115,67 @@ Requirements mentioned above are based on these modules which are used in this r
       asg_min_size: "{{ instance_count }}"
       asg_max_size: "{{ instance_count }}"
       asg_desired_capacity: "{{ instance_count }}"
-            
+
+      canary_release_count: 0
+
+      canary_release_instance_ids: []
+
+      # Set this to false if you have done canary release
+      # for AMI version for optimal instance cost.
+      # Setting this to true with canary release already done
+      # will relaunch the new instances again with same AMI.
+      replace_new_instances: false
+
+      instance_user_data: |
+        #cloud-config
+        bootcmd:
+        - echo "succeed"
+        runcmd:
+        - /opt/init/init-instance /dummy/data/dd.key
+```
+
+## Example Playbook For Canary Deployment ##
+
+
+```
+---
+- hosts: localhost
+  connection: local
+  vars:
+    # set common_java_opts in supervisor using the ami baking playbook!
+    app_memory_java_opts: >-
+      -Xms1g -Xmx1g -XX:PermSize=512m -XX:MaxPermSize=512m
+    instance_count: 1
+  roles:
+    - role: ansible-blue_green-lc-deploy
+      aws_region: ap-southeast-1
+
+      service_name: tsiasg
+      cluster_role: app
+      service_environment: production
+
+      ami_id: ami-0a1b2c3d4e5f67890
+
+      asg_name: tsiasg-app-abcdef0123456789
+      asg_min_size: "{{ instance_count }}"
+      asg_max_size: "{{ instance_count }}"
+      asg_desired_capacity: "{{ instance_count }}"
+
+      # Canary release count should be less than ASG
+      # instance size, otherwise deployment will fail.
+      # If canary_release_count > 0 then canary_release_instance_ids should not be used.
+      # Both variables cannot be used at same time
+      canary_release_count: 3
+
+      # Set this to instance ids to be replaced in canary release.
+      # No of instances should be strictly less than instance count in ASG.
+      # Incorrect instance ids will result in failed deployment.
+      # If canary_release_instance_ids size > 0, canary_release_count should not be used.
+      # Both variables cannot be used at same time
+      canary_release_instance_ids: ["i-97593jjeief8488", "i-97593juoo98"]
+
+      replace_new_instances: true
+
       instance_user_data: |
         #cloud-config
         bootcmd:
